[package]
name = "ntex-admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntex = { version = "2.4.0", features = ["tokio"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"

rbs = { version = "4.5"}
rbatis = { version = "4.5"}
#rbatis = { version = "4.0",features = ["debug_mode"]}
rbdc-mysql={version="4.5"}
dotenvy = "0.15.7"

lazy_static = "1.4.0"

log = "0.4"
log4rs = "1.0"

jsonwebtoken = "9.3.0"

thiserror = "1.0"