[package]
name = "ntex-admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntex = { version = "2.4.0", features = ["tokio"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"

tokio = { version = "1.29.1" }
sea-orm = { version = "1.1.1", features = ["sqlx-mysql", "runtime-async-std-native-tls", "with-chrono", "debug-print", "macros"] }
#tracing-subscriber = "0.3.17"
dotenvy = "0.15.7"

once_cell = "1.18.0"

log = "0.4"
log4rs = "1.0"

jsonwebtoken = "9.3.0"

thiserror = "2.0.3"